gateway-api/gateway-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
        - name: gateway-api
          image: challengesemestre2.azurecr.io/gateway-api
          ports:
            - containerPort: 8000
