gateway-api/gateway-chart/templates/service.yaml
# gateway-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-service
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
